--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Myntra Clone</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
@@ -11,38 +13,38 @@
         <div class="logo_container">
             <a href="#"><img class="myntra_home" src="media1/myntra_logo.webp" alt="myntra_home"></a>
         </div> 
-        <div class="nav_bar">
+        <nav class="nav_bar" aria-label="Primary">
             <a href="#">Men</a>
-            <a href="#">Wemen</a>
+            <a href="#">Women</a>
             <a href="#">Kids</a>
             <a href="#">Home & Living</a>
             <a href="#">Beauty</a>
             <a href="#">Studio<sup>new</sup></a>
-        </div>
+        </nav>
         <div class="search_bar">
             <span class="material-symbols-outlined search_icon">search</span>
-            <input placeholder="Search for products, brands and more" class="search_input">
+            <input type="text" placeholder="Search for products, brands and more" class="search_input" aria-label="Search for products, brands and more">
         </div>           
         <div class="action_bar">
-            <div class="action_container">
+            <a class="action_container" href="#" aria-label="Profile">
                 <span class="material-symbols-outlined action_icon">person</span>
                 <span class="action_name">Profile</span>
-            </div>
-            <div class="action_container">
+            </a>
+            <a class="action_container" href="#" aria-label="Wishlist">
                 <span class="material-symbols-outlined action_icon">favorite</span>
                 <span class="action_name">Wishlist</span>
-            </div>
-            <div class="action_container">
+            </a>
+            <a class="action_container" href="#" aria-label="Bag">
                 <span class="material-symbols-outlined action_icon">shopping_bag</span>
                 <span class="action_name">Bag</span>
-            </div>
+            </a>
         </div>
     </header>
     <main>
         <div class="banner_container">
             <img class="banner_image" src="media1/banner.jpg" alt="main banner">
         </div>
-        <div class="category_heading">medalworthy bands to bag</div>
+        <div class="category_heading">Medal-worthy brands to bag</div>
         <div class="category_items">
             <a href="#"><img class="sale_item" src="offers/1.png" ></a>
             <a href="#"><img class="sale_item" src="offers/2.png" ></a>
@@ -74,7 +76,7 @@
     <aside>
         <div class="sidebar">
             <div class="arrow"></div>
-            <p>UPTO ₹300 OFF</p>
+            <p>UP TO ₹300 OFF</p>
         </div>
     </aside>
     <footer>
@@ -82,12 +84,12 @@
             <div class="footer_column">
                 <h3>ONLINE SHOPPING</h3>
                 <a href="#">Men</a>
-                <a href="#">Wemen</a>
+                <a href="#">Women</a>
                 <a href="#">Kids</a>
                 <a href="#">Home</a>
                 <a href="#">Beauty</a>
-                <a href="#">Genz</a>
-                <a href="#">Gift cards</a>
+                <a href="#">GenZ</a>
+                <a href="#">Gift Cards</a>
                 <a href="#">Myntra Insider</a>
 
             </div>
@@ -96,16 +98,16 @@
                 <a href="#">Contact Us</a>
                 <a href="#">FAQ</a>
                 <a href="#">T&C</a>
-                <a href="#">Terms O Use</a>
-                <a href="#">Shopping</a>
+                <a href="#">Terms Of Use</a>
+                <a href="#">Shipping</a>
                 <a href="#">Cancellation</a>
-                <a href="#">returns</a>
+                <a href="#">Returns</a>
                 <a href="#">Privacy Policy</a>
-                <a href="#">grievance Redressal</a>
+                <a href="#">Grievance Redressal</a>
 
             </div>
             <div class="footer_column1">
-                <h3>EXPERINCE MYNTRA APP ON MOBILE</h3>
+                <h3>EXPERIENCE MYNTRA APP ON MOBILE</h3>
                 <div class="download_store">
                     <img class="link" src="https://constant.myntassets.com/web/assets/img/80cc455a-92d2-4b5c-a038-7da0d92af33f1539674178924-google_play.png">
                     <img class="link" src="https://constant.myntassets.com/web/assets/img/bc5e11ad-0250-420a-ac71-115a57ca35d51539674178941-apple_store.png">
@@ -130,7 +132,7 @@
                     <div><img src="https://assets.myntassets.com/assets/images/retaillabs/2023/5/22/becb1b16-86cc-4e78-bdc7-7801c17947831684737106127-Return-Window-image.png" >
                     </div>
                     <div>
-                        <strong>Return within 14days </strong>of receiving your order
+                        <strong>Return within 14 days </strong>of receiving your order
                     </div>
                 </div>    
             </div>
